--- a/app.json
+++ b/app.json
@@ -1,13 +1,10 @@
 {
   "expo": {
     "name": "G2i mobile code challenge",
-    "slug": "g2i-code-challenge-mobile-template",
+    "slug": "g2i-code-challenge-mobile-template-antoineww",
     "privacy": "public",
-    "sdkVersion": "32.0.0",
-    "platforms": [
-      "ios",
-      "android"
-    ],
+    "sdkVersion": "36.0.0",
+    "platforms": ["ios", "android", "web"],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -19,9 +16,7 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     }
