Updated js to ts files

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "G2i mobile code challenge",
+    "name": "antoineww - G2i mobile code challenge",
     "slug": "g2i-code-challenge-mobile-template-antoineww",
     "version": "1.0.0",
     "orientation": "portrait",
