--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-animatable": "^1.3.3",
+    "react-native-chart-kit": "^6.6.1",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
@@ -48,6 +49,7 @@
     "@types/react-native": "~0.62.13",
     "babel-preset-expo": "~8.1.0",
     "jest-expo": "~38.0.0",
+    "react-native-svg": "^12.1.0",
     "typescript": "~3.9.5"
   },
   "private": true
